[package]
name = "datasketches-rs"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "1.0.50"

[build-dependencies]
cxx-build = "1.0"
cc = { version = "1.0", features = ["parallel"] }
bindgen = { version = "0.59", default-features = false, features = ["runtime"] }
glob = "0.3"
